[tool.poetry]
name = "rocketchathistory"
version = "0.1.0"
description = "Saves IM messages from rocketchat"
authors = ["Thorben Menne <mennthor@aol.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rocketchat-api = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
